--- a/index.html
+++ b/index.html
@@ -40,14 +40,18 @@
                     nicht etwa ein Hin&shy;der&shy;nis, sondern das eigentliche Ziel.</p>
 
                 <p>Die dabei ent&shy;ste&shy;hen&shy;den Ge&shy;dan&shy;ken wer&shy;de ich in Zu&shy;kunft
-                    auf die&shy;er Web&shy;sei&shy;te sor&shy;tier&shy;en und do&shy;ku&shy;men&shy;tier&shy;en.</p>
+                    auf die&shy;ser Web&shy;sei&shy;te sor&shy;tier&shy;en und
+                    do&shy;ku&shy;men&shy;tier&shy;en.</p>
             </div>
 
             <section id="frontpage-aboutme">
                 <ul>
                     <li><span class="icon-location"></span> München</li>
-                    <li><span class="icon-linkedin-squared"></span> LinkedIn</li>
-                    <li><span class="icon-github-circled"></span> Github</li>
+                    <li><a href="https://de.linkedin.com/pub/lukas-stührk/b8/b4b/139"
+                           title="Mein Profil auf LinkedIn"><span class="icon-linkedin-squared"></span>
+                        LinkedIn</a></li>
+                    <li><a href="https://github.com/Lukas-Stuehrk"><span class="icon-github-circled"></span> Github</a>
+                    </li>
                 </ul>
             </section>
         </div>
